Update for release of Jupyter VPython 2.0

--- a/Demos/AtomicSolid.ipynb
+++ b/Demos/AtomicSolid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -10,19 +10,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/glow.2.1.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/glow.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -46,7 +34,7 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
+       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -58,7 +46,7 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/glow.2.1.min\"], function(){console.log(\"GLOW LOADED\");})"
+       "require([\"nbextensions/vpython_libraries/glow.min\"], function(){console.log(\"GLOW LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -71,6 +59,18 @@
      "data": {
       "application/javascript": [
        "require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -102,17 +102,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'sphere' object has no attribute 'momentum'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-ef341aa444da>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     88\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0matom\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0matoms\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     89\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0matom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvisible\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 90\u001b[1;33m             \u001b[0matom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpos\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0matom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpos\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0matom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmomentum\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mdt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     91\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mspring\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msprings\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     92\u001b[0m         \u001b[0mspring\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maxis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mspring\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mend\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpos\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mspring\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'sphere' object has no attribute 'momentum'"
-     ]
     }
    ],
    "source": [
@@ -130,7 +119,6 @@
     "L0 = spacing-1.8*atom_radius\n",
     "V0 = pi*(0.5*atom_radius)**2*L0 # initial volume of spring\n",
     "scene.center = 0.5*(N-1)*vector(1,1,1)\n",
-    "scene.range = 2.5\n",
     "dt = 0.04*(2*pi*sqrt(m/k))\n",
     "axes = [vector(1,0,0), vector(0,1,0), vector(0,0,1)]\n",
     "\n",
@@ -151,15 +139,16 @@
     "        for z in range(-1,N+1,1):\n",
     "            for y in range(-1,N+1,1):\n",
     "                for x in range(-1,N+1,1):\n",
-    "                    visible = True\n",
+    "                    atom = sphere()\n",
+    "                    atom.pos = vector(x,y,z)*spacing\n",
+    "                    atom.radius = atom_radius\n",
+    "                    atom.color = vector(0,0.58,0.69)\n",
     "                    if 0 <= x < N and 0 <= y < N and 0 <= z < N:\n",
-    "                        p = momentumRange*vector.random()\n",
+    "                        p = vec.random()\n",
+    "                        atom.momentum = momentumRange*p\n",
     "                    else:\n",
-    "                        p = vec(0,0,0)\n",
-    "                        visible = False\n",
-    "                    atom = sphere(pos=vector(x,y,z)*spacing,\n",
-    "                                  radius=atom_radius, visible=visible,\n",
-    "                                  color=vector(0,0.58,0.69), momentum=p)\n",
+    "                        atom.visible = False\n",
+    "                        atom.momentum = vec(0,0,0)\n",
     "                    atom.index = len(self.atoms)\n",
     "                    self.atoms.append( atom )\n",
     "        for atom in self.atoms:\n",
@@ -191,12 +180,16 @@
     "    # Create a grid of springs linking each atom to the adjacent atoms\n",
     "    # in each dimension, or to invisible motionless atoms\n",
     "    def make_spring(self, start, end, visible):\n",
-    "        spring = helix(pos=start.pos, axis=end.pos-start.pos, visible=visible,\n",
-    "                    thickness=0.05, radius=0.5*atom_radius, length=spacing,\n",
-    "                    up=vector(1,1,1), # prevent fibrillation of vertical springs\n",
-    "                    color=color.orange)\n",
+    "        spring = helix()\n",
+    "        spring.pos = start.pos\n",
+    "        spring.axis = end.pos-start.pos\n",
+    "        spring.visible = visible\n",
+    "        spring.thickness = 0.05\n",
+    "        spring.radius = 0.5*atom_radius\n",
+    "        spring.length = spacing\n",
     "        spring.start = start\n",
     "        spring.end = end\n",
+    "        spring.color = color.orange\n",
     "        self.springs.append(spring)\n",
     "\n",
     "c = crystal(N, atom_radius, spacing, 0.1*spacing*sqrt(k/m))\n",
