--- a/Demos/BillboardingText.ipynb
+++ b/Demos/BillboardingText.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -105,65 +105,28 @@
     }
    ],
    "source": [
-    "import ipywidgets as wd\n",
     "from vpython import *\n",
-    "# This version uses Jupyter notebook widgets: button, slider, menu\n",
-    "# See ButtonsSlidersMenus2 for a version that uses VPython button, slider, menu, radio button, checkbox\n",
+    "b = box(pos=vec(-4,2,0), color=color.red)\n",
+    "c1 = cylinder(pos=b.pos, radius=0.1, axis=vec(0,1.5,0), color=color.yellow)\n",
+    "s = sphere(pos=vec(4,-4,0), radius=0.5, color=color.green)\n",
+    "c2 = cylinder(pos=s.pos, radius=0.1, axis=vec(0,1.5,0), color=color.yellow)\n",
+    "t1 = text(text='box', pos=c1.pos+c1.axis, align='center', height=0.5,\n",
+    "          color=color.yellow, billboard=True, emissive=True)\n",
+    "t2 = text(text='sphere', pos=c2.pos+c2.axis, align='center', height=0.5,\n",
+    "          color=color.yellow, billboard=True, emissive=True)\n",
+    "t3 = text(text='Faces forward', pos=vec(-4,0,0),\n",
+    "          color=color.cyan, billboard=True, emissive=True)\n",
+    "box(pos=t3.start, size=0.1*vec(1,1,1), color=color.red)\n",
+    "t4 = text(text='Regular text', pos=vec(-4,-1,0), depth=0.5, color=color.yellow,\n",
+    "        start_face_color=color.red, end_face_color=color.green)\n",
+    "box(pos=t4.start, size=0.1*vec(1,1,1), color=color.red)\n",
     "\n",
-    "scene.width = 350\n",
-    "scene.height = 300\n",
-    "scene.range = 1.5\n",
-    "scene.title = \"Buttons, Sliders, and Drop-down Menus\"\n",
-    "\n",
-    "box_object = box(visible=True)\n",
-    "cone_object = cone(visible=False, radius=0.5)\n",
-    "pyramid_object = pyramid(visible=False)\n",
-    "cylinder_object = cylinder(visible=False, radius=0.5)\n",
-    "objects = {'box':box_object, 'cone':cone_object, 'pyramid':pyramid_object, 'cylinder':cylinder_object}\n",
-    "\n",
-    "currentobject = box_object\n",
-    "currentobject.color = color.cyan\n",
-    "\n",
-    "b = wd.Button(description='Pause')\n",
-    "c = wd.Button(description='Red')\n",
-    "m = wd.Dropdown(options=['box', 'cone', 'cylinder', 'pyramid'], value='box',\n",
-    "                           description='Object:')\n",
-    "container = wd.HBox(children=[b,c,m])\n",
-    "display(container)\n",
-    "sl = wd.FloatSlider(description='Rotation speed:', min=20, max=500, step=1, value=250)\n",
-    "display(sl)\n",
-    "\n",
-    "running = True\n",
-    "\n",
-    "def b_handler(s):\n",
-    "    global running\n",
-    "    running = not running\n",
-    "    if s.description == 'Run': s.description = 'Pause'\n",
-    "    else: s.description = 'Run'\n",
-    "b.on_click(b_handler)\n",
-    "\n",
-    "def c_handler(s):\n",
-    "    if s.description == 'Red':\n",
-    "        s.description = 'Cyan'\n",
-    "        currentobject.color = color.red\n",
-    "    else:\n",
-    "        s.description = 'Red'\n",
-    "        currentobject.color = color.cyan\n",
-    "c.on_click(c_handler)\n",
-    "\n",
-    "def m_handler(s):\n",
-    "    global currentobject\n",
-    "    col = currentobject.color\n",
-    "    currentobject.visible = False\n",
-    "    currentobject = objects[s['new']]\n",
-    "    currentobject.color = col\n",
-    "    currentobject.visible = True\n",
-    "m.observe(m_handler, names='value')\n",
-    "\n",
-    "while True:\n",
-    "    rate(100)\n",
-    "    if running:\n",
-    "        currentobject.rotate(angle=1e-4*sl.value, axis=vec(0,1,0))"
+    "scene.caption = \"\"\"<b>3D text can be \"billboard\" text -- always facing you.</b>\n",
+    "Note that the \"Regular text\" has different colors on the front, back and sides.\n",
+    "Right button drag or Ctrl-drag to rotate \"camera\" to view scene.\n",
+    "To zoom, drag with middle button or Alt/Option depressed, or use scroll wheel.\n",
+    "  On a two-button mouse, middle is left + right.\n",
+    "Touch screen: pinch/extend to zoom, swipe or two-finger rotate.\"\"\""
    ]
   },
   {
