--- a/Demos/Color-RGB-HSV1.ipynb
+++ b/Demos/Color-RGB-HSV1.ipynb
@@ -96,7 +96,7 @@
     "import ipywidgets as wd\n",
     "from vpython import *\n",
     "# This version uses Jupyter notebook slider\n",
-    "# See Color-RGB-HSV2 for a version that uses GlowScript slider\n",
+    "# See Color-RGB-HSV2 for a version that uses VPython slider\n",
     "\n",
     "scene.userzoom = False\n",
     "scene.userspin = False\n",
