--- a/Demos/Color-RGB-HSV2.ipynb
+++ b/Demos/Color-RGB-HSV2.ipynb
@@ -106,7 +106,7 @@
    ],
    "source": [
     "from vpython import *\n",
-    "# This version uses GlowScript slider\n",
+    "# This version uses VPython slider\n",
     "# See ButtonsSlidersMenus1 for a version that uses Jupyter slider\n",
     "\n",
     "scene.userzoom = False\n",
