--- a/Demos/Extrusions.ipynb
+++ b/Demos/Extrusions.ipynb
@@ -105,65 +105,69 @@
     }
    ],
    "source": [
-    "import ipywidgets as wd\n",
     "from vpython import *\n",
-    "# This version uses Jupyter notebook widgets: button, slider, menu\n",
-    "# See ButtonsSlidersMenus2 for a version that uses VPython button, slider, menu, radio button, checkbox\n",
+    "scene.background = color.gray(0.8)\n",
+    "scene.forward = vec(0,-0.2,-1)\n",
+    "scene.fov = 0.2\n",
+    "scene.range = 3.8\n",
+    "scene.caption = \"\"\"Right button drag or Ctrl-drag to rotate \"camera\" to view scene.\n",
+    "To zoom, drag with middle button or Alt/Option depressed, or use scroll wheel.\n",
+    "     On a two-button mouse, middle is left + right.\n",
+    "Touch screen: pinch/extend to zoom, swipe or two-finger rotate.\\n\"\"\"\n",
     "\n",
-    "scene.width = 350\n",
-    "scene.height = 300\n",
-    "scene.range = 1.5\n",
-    "scene.title = \"Buttons, Sliders, and Drop-down Menus\"\n",
+    "E1 = extrusion(path=[vec(0,0,0), vec(0,0,-0.7)], texture=textures.wood_old,\n",
+    "    shape=[ shapes.circle(radius=1.5),\n",
+    "            shapes.triangle(pos=[0,-0.6], length=1.2),\n",
+    "            shapes.trapezoid(pos=[0,0.6], width=1.6,\n",
+    "              height=1, top=0.6) ], pos=vec(-4,1.5,0))\n",
     "\n",
-    "box_object = box(visible=True)\n",
-    "cone_object = cone(visible=False, radius=0.5)\n",
-    "pyramid_object = pyramid(visible=False)\n",
-    "cylinder_object = cylinder(visible=False, radius=0.5)\n",
-    "objects = {'box':box_object, 'cone':cone_object, 'pyramid':pyramid_object, 'cylinder':cylinder_object}\n",
+    "copper = vec(0.722,0.451,0.200)\n",
+    "E2 = extrusion(path=paths.arc(radius=1.7, angle2=pi), texture=textures.metal, \n",
+    "    shape=[ [shapes.triangle(length=2), shapes.circle(pos=[0,.5], radius=0.2),\n",
+    "    shapes.trapezoid(pos=[0,-0.2],\n",
+    "    width=0.6, height=0.4)],\n",
+    "    [shapes.rectangle(pos=[0,1.8],\n",
+    "    width=1,height=0.3)] ],\n",
+    "    start_face_color=copper, end_face_color=copper)\n",
+    "E2center = E2.pos    # initial pos of center of extrusion\n",
+    "E2.pos = vec(3,2,0)  # new pos of center of extrsion\n",
+    "E2rot = E2.pos+vec(0,0,-E2center.z) # a location at the front of the extrusion\n",
     "\n",
-    "currentobject = box_object\n",
-    "currentobject.color = color.cyan\n",
+    "halo = ring(pos=vec(0,0,1), radius=0.8, thickness=0.2, color=color.cyan )\n",
     "\n",
-    "b = wd.Button(description='Pause')\n",
-    "c = wd.Button(description='Red')\n",
-    "m = wd.Dropdown(options=['box', 'cone', 'cylinder', 'pyramid'], value='box',\n",
-    "                           description='Object:')\n",
-    "container = wd.HBox(children=[b,c,m])\n",
-    "display(container)\n",
-    "sl = wd.FloatSlider(description='Rotation speed:', min=20, max=500, step=1, value=250)\n",
-    "display(sl)\n",
+    "rect = extrusion(path=paths.rectangle(width=5, height=2), \n",
+    "            shape=shapes.hexagon(length=0.3), color=color.red)\n",
     "\n",
-    "running = True\n",
+    "bottom = extrusion(path=paths.cross(width=4, thickness=1),\n",
+    "            shape=shapes.circle(radius=0.2), color=color.green)\n",
     "\n",
-    "def b_handler(s):\n",
-    "    global running\n",
-    "    running = not running\n",
-    "    if s.description == 'Run': s.description = 'Pause'\n",
-    "    else: s.description = 'Run'\n",
-    "b.on_click(b_handler)\n",
+    "tube = extrusion(path=[vec(0,0,0), vec(2,0,0)], shape=shapes.circle(radius=0.6, thickness=0.2),\n",
+    "                    pos=vec(-1,1.7,0), axis=vec(0,0,2), color=color.yellow, end_face_color=color.blue)\n",
+    "text(pos=tube.pos+vec(0,0,1), text='tube', align='center',\n",
+    "        height=0.25, depth=0, color=color.blue)\n",
     "\n",
-    "def c_handler(s):\n",
-    "    if s.description == 'Red':\n",
-    "        s.description = 'Cyan'\n",
-    "        currentobject.color = color.red\n",
-    "    else:\n",
-    "        s.description = 'Red'\n",
-    "        currentobject.color = color.cyan\n",
-    "c.on_click(c_handler)\n",
+    "run = True\n",
     "\n",
-    "def m_handler(s):\n",
-    "    global currentobject\n",
-    "    col = currentobject.color\n",
-    "    currentobject.visible = False\n",
-    "    currentobject = objects[s['new']]\n",
-    "    currentobject.color = col\n",
-    "    currentobject.visible = True\n",
-    "m.observe(m_handler, names='value')\n",
+    "def runner(r):\n",
+    "    global run\n",
+    "    run = r.checked\n",
+    "    \n",
+    "checkbox(bind=runner, text='Run', checked=True)\n",
     "\n",
+    "#scene.waitfor('textures')\n",
+    "\n",
+    "t = 0\n",
+    "dt = 0.01\n",
+    "dtheta = 0.01\n",
     "while True:\n",
     "    rate(100)\n",
-    "    if running:\n",
-    "        currentobject.rotate(angle=1e-4*sl.value, axis=vec(0,1,0))"
+    "    if run:\n",
+    "        halo.pos.x = -1+sin(2*t)\n",
+    "        bottom.pos.y = -2+0.5*cos(3*t)\n",
+    "        E1.rotate(angle=dtheta, axis=vec(0,1,0))\n",
+    "        E2.rotate(angle=-dtheta, axis=vec(0,1,0), origin=E2rot)\n",
+    "        t += dt\n",
+    "\n"
    ]
   },
   {
@@ -181,7 +185,7 @@
   "kernelspec": {
    "display_name": "VPython",
    "language": "python",
-   "name": "vpython"
+   "name": "vpythonkernel"
   },
   "language_info": {
    "codemirror_mode": {
