--- a/Demos/MouseDrag.ipynb
+++ b/Demos/MouseDrag.ipynb
@@ -108,7 +108,7 @@
     "from vpython import *\n",
     "# John Coady\n",
     "\n",
-    "title = \"Click and drag the mouse in the 3D window to insert and drag a small sphere.\"\n",
+    "title = \"Click and drag the mouse in the 3D canvas to insert and drag a small sphere.\"\n",
     "scene.title = title\n",
     "\n",
     "scene.range = 3\n",
