--- a/Demos/Plot3D.ipynb
+++ b/Demos/Plot3D.ipynb
@@ -10,19 +10,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/glow.2.1.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/glow.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -46,7 +34,7 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
+       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -58,7 +46,7 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/glow.2.1.min\"], function(){console.log(\"GLOW LOADED\");})"
+       "require([\"nbextensions/vpython_libraries/glow.min\"], function(){console.log(\"GLOW LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -71,6 +59,18 @@
      "data": {
       "application/javascript": [
        "require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -112,12 +112,11 @@
     "# The extra row and extra column of vertex objects simplifies edge calculations.\n",
     "# The stride length from y = 0 to y = 1 is L.\n",
     "L = 25\n",
-    "scene.range = 1.3*L\n",
     "scene.center = vec(0.05*L,0.2*L,0)\n",
-    "scene.forward = vec(-0.7,-0.5,-1)\n",
+    "scene.range = 1.3*L\n",
     "## The next line contains LaTeX math notation. See http://www.glowscript.org/docs/VPythonDocs/MathJax.html\n",
     "#scene.caption = \"\"\"\\\\( f(x,y,t) = 0.7+0.2\\\\sin{(10x)}\\\\cos{(10y)}\\\\cos{(2t)} \\\\)\n",
-    "scene.caption = \"\"\"<i>f</i>(<i>x,y,t</i>) = 0.7+0.2sin{(10<i>x</i>)cos{(10<i>y</i>)cos{(2<i>t</i>)\n",
+    "scene.caption = \"\"\"<i>f</i>(<i>x,y,t</i>) = 0.7+0.2sin(10<i>x</i>)cos(10<i>y</i>)cos(2<i>t</i>)\n",
     "<b>Click to toggle between pausing or running.</b>\n",
     "In GlowScript programs:\n",
     "   Right button drag or Ctrl-drag to rotate \"camera\" to view scene.\n",
@@ -151,15 +150,10 @@
     "        yaxis = cylinder(pos=vec(0,0,0), axis=vec(d,0,0), radius=R, color=color.yellow)\n",
     "        zaxis = cylinder(pos=vec(0,0,0), axis=vec(0,d,0), radius=R, color=color.yellow)\n",
     "        k = 1.02\n",
-    "        # At the moment of writing, the text object was not yet available in Jupyter VPython\n",
-    "        #h = 0.05*L\n",
-    "        #text(pos=xaxis.pos+k*xaxis.axis, text='x', height=h, align='center', billboard=True)\n",
-    "        #text(pos=yaxis.pos+k*yaxis.axis, text='y', height=h, align='center', billboard=True)\n",
-    "        #text(pos=zaxis.pos+k*zaxis.axis, text='z', height=h, align='center', billboard=True)\n",
-    "        h = 20\n",
-    "        label(pos=xaxis.pos+k*xaxis.axis, text='x', height=h, align='center', box=False)\n",
-    "        label(pos=yaxis.pos+k*yaxis.axis, text='y', height=h, align='center', box=False)\n",
-    "        label(pos=zaxis.pos+k*zaxis.axis, text='z', height=h, align='center', box=False)\n",
+    "        h = 0.05*L\n",
+    "        text(pos=xaxis.pos+k*xaxis.axis, text='x', height=h, align='center', billboard=True, emissive=True)\n",
+    "        text(pos=yaxis.pos+k*yaxis.axis, text='y', height=h, align='center', billboard=True, emissive=True)\n",
+    "        text(pos=zaxis.pos+k*zaxis.axis, text='z', height=h, align='center', billboard=True, emissive=True)\n",
     "    \n",
     "        self.vertices = []\n",
     "        for x in range(L):\n",
@@ -182,7 +176,7 @@
     "                v1 = self.get_vertex(x+1,y)\n",
     "                v2 = self.get_vertex(x+1, y+1)\n",
     "                v3 = self.get_vertex(x, y+1)\n",
-    "                quad(v0=v0, v1=v1, v2=v2, v3=v3)\n",
+    "                quad(vs=[v0, v1, v2, v3])\n",
     "        \n",
     "    def make_normals(self):\n",
     "        # Set the normal for each vertex to be perpendicular to the lower left corner of the quad.\n",
@@ -192,10 +186,9 @@
     "            y = i % L\n",
     "            if x == L-1 or y == L-1: continue\n",
     "            v = self.vertices[i]\n",
-    "            a = self.vertices[i+L].pos - v.pos # direction is to the right\n",
-    "            b = self.vertices[i+1].pos - v.pos # direction is upward\n",
-    "            N = cross(a,b) # all vertex objects have a and b due to extra row and column\n",
-    "            v.normal = N\n",
+    "            a = self.vertices[i+L].pos - v.pos\n",
+    "            b = self.vertices[i+1].pos - v.pos\n",
+    "            v.normal = cross(a,b)\n",
     "    \n",
     "    def replot(self):\n",
     "        for i in range(L*L):\n",
@@ -217,7 +210,7 @@
     "t = 0\n",
     "dt = 0.02\n",
     "def f(x, y):\n",
-    "    # Return the value of the function of x, y, and t:\n",
+    "    # Return the value of the function of x and y:\n",
     "    return 0.7+0.2*sin(10*x)*cos(10*y)*sin(5*t)\n",
     "\n",
     "p = plot3D(f, 0, 1, 0, 1, 0, 1) # function, xmin, xmax, ymin, ymax (defaults 0, 1, 0, 1, 0, 1)\n",
@@ -228,12 +221,13 @@
     "    run = not run\n",
     "\n",
     "scene.bind('mousedown', running)\n",
+    "scene.forward = vec(-0.7,-0.5,-1)\n",
     "\n",
     "while True:\n",
     "    rate(30)\n",
     "    if run:\n",
     "        p.replot()\n",
-    "        t += dt"
+    "        t += dt\n"
    ]
   },
   {
