--- a/Demos/Stonehenge.ipynb
+++ b/Demos/Stonehenge.ipynb
@@ -10,19 +10,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/glow.2.1.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/glow.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -46,7 +34,7 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
+       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -58,7 +46,7 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/glow.2.1.min\"], function(){console.log(\"GLOW LOADED\");})"
+       "require([\"nbextensions/vpython_libraries/glow.min\"], function(){console.log(\"GLOW LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -71,6 +59,18 @@
      "data": {
       "application/javascript": [
        "require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -113,10 +113,10 @@
     "# A surreal scene that illustrates many of the features of GlowScript\n",
     "\n",
     "# Add instructions below the display\n",
-    "s = \"<b>Fly through the scene:</b> With the mouse button down near the center of the canvas,<br>\"\n",
-    "s += \"    move the mouse or your finger above or below the center of the scene to move forward or backward;<br>\"\n",
-    "s += \"    move the mouse or your finger right or left to turn your direction of motion.<br>\"\n",
-    "s += \"(Normal VPython rotate and zoom are turned off in this program.)\"\n",
+    "s = \"<b>Fly through the scene:</b><br>\"\n",
+    "s += \"    drag the mouse or your finger above or below the center of the scene to move forward or backward;<br>\"\n",
+    "s += \"    drag the mouse or your finger right or left to turn your direction of motion.<br>\"\n",
+    "s += \"(Normal GlowScript rotate and zoom are turned off in this program.)\"\n",
     "scene.caption = s\n",
     "\n",
     "ycenter = 2\n",
@@ -129,13 +129,15 @@
     "scene.background = color.gray(0.5)\n",
     "scene.ambient = color.gray(0.4)\n",
     "\n",
-    "scene.title = \"<b>Surreal Stonehenge</b>\"\n",
-    "\n",
     "def hourminute():\n",
+    "    #GlowScript JavaScript date machinery\n",
+    "    #d = Date()\n",
+    "    #hour = d.getHours() % 12\n",
+    "    #minute = d.getMinutes()\n",
     "    now = time.localtime(time.time())\n",
     "    hour = now[3] % 12\n",
     "    minute = now[4]\n",
-    "    return [hour, minute]\n",
+    "    return (hour, minute)\n",
     "\n",
     "class analog_clock:\n",
     "    def __init__(self, pos, radius, axis):\n",
@@ -202,7 +204,26 @@
     "                size=vec(1.1*d,0.9*4*photocenter,0.9*4*photocenter), axis=vec(c,0,s),\n",
     "                    texture=T)\n",
     "\n",
-    "# Decorate back slab with a gold box and a clock\n",
+    "entry = text(pos=vector(0,4.4,R+d/2), text='Surreal\\nStonehenge', align='center',\n",
+    "                depth=0.3, height=0.5)\n",
+    "                \n",
+    "B = text(pos=vector(0.4*R,0,-1*R), text='B', height=2, align='center', font='serif',\n",
+    "                color=color.magenta, depth=1)\n",
+    "\n",
+    "gh = 1\n",
+    "ga = 1\n",
+    "gr = 0.05\n",
+    "rgear = 0.7\n",
+    "tgear = ga/5 # gear thickness\n",
+    "support = extrusion(pos=vector(7,gh/2,10), path=[vector(0,0,0), vector(0,gh,0), vector(0,gh,ga), vector(0,0,ga)],\n",
+    "            shape=shapes.circle(radius=gr), color=vector(1,.7,0))\n",
+    "support.clone(pos=vector(7+2*rgear,gh/2,10))\n",
+    "gear1 = extrusion(pos=support.pos+vector(0,gh/2,0), path=[vector(0,0,-tgear/2), vector(0,0,tgear/2)],\n",
+    "            shape=shapes.gear(radius=rgear), color=color.gray(0.85), texture=textures.metal)\n",
+    "gear2 = gear1.clone(pos=gear1.pos+vector(2*rgear,0,0))\n",
+    "gear1.rotate(angle=-0.4*2*pi/20, axis=vector(0,0,1)) # default is 20 teeth\n",
+    "\n",
+    "# Decorate back slab with a wood box and a clock\n",
     "box(pos=vector(0,h/2.,-R+d/2+0.1), size=vector(w/2.,w/2.,0.2), texture=textures.wood)\n",
     "clock = analog_clock(vector(0,h/2.,-R+d/2+0.2+0.2*h/10), 0.2*w, vector(0,0,1))\n",
     "\n",
@@ -267,7 +288,6 @@
     "ballangle = 0.05*pi\n",
     "ball = []\n",
     "ball.append(sphere(pos=vector(0,0,0), size=2*rball*vector(1,1,1), color=color.blue))\n",
-    "\n",
     "for nn in range(4):\n",
     "    cc = cone(pos=vector(0,0,0)+vector(0.8*rball,0,0), axis=vector(3*rball,0,0), size=rball*vector(3,1,1), color=color.yellow)\n",
     "    cc.rotate(angle=0.5*nn*pi, axis=vector(0,1,0), origin=vector(0,0,0))\n",
@@ -277,7 +297,7 @@
     "\n",
     "# A table with a mass-spring object sliding on it\n",
     "table = cone(pos=vector(0.4*R, h/4, -.3*R), size=vector(h/4, 0.6 * R, 0.6 * R), \n",
-    "  axis=vector(0, -1, 0), texture=dict(file=textures.wood_old, turn=1))\n",
+    "  axis=vector(0, -1, 0), texture={'file':textures.wood_old, 'turn':1})\n",
     "tabletop = table.pos\n",
     "rspring = 0.02 * h\n",
     "Lspring = .15 * R\n",
@@ -305,20 +325,8 @@
     "haircolor = color.black\n",
     "roam = 0\n",
     "\n",
-    "# Decorate the front entrance slab (GlowScript currently lacks a 3D text object)\n",
-    "#text(pos=(0, 0.77*h, R+d/2), text=\"No Exit\", color=color.yellow,\n",
-    "#           depth=0.3, height=0.7, align=\"center\")\n",
-    "\n",
-    "# Display extruded text\n",
-    "##text( pos=(2.0,-0.3*sin(pi/10),-2.0), text='A', height=2.0, depth=0.5,\n",
-    "##     color=(0,0,1.0), up=(0,cos(pi/3.4),-sin(pi/3.4)), axis=(0.5,0,1))\n",
-    "##text( pos=(3.2,0,-2), text='B', height=2.0, depth=0.5,\n",
-    "##     color=(1.0,1.0,0), axis=(1,0,0.3))\n",
-    "##text( pos=(5.0,-0.6*sin(pi/18),-1.4), text='C', height=2.0, depth=0.5,\n",
-    "##     color=(1.0,0,1.0), axis=(1,0,0.6), up=(0,cos(pi/8),sin(pi/8)) )\n",
-    "\n",
     "scene.visible = False\n",
-    "#scene.waitfor(\"textures\")\n",
+    "scene.waitfor(\"textures\")\n",
     "scene.visible = True\n",
     "\n",
     "roam = False\n",
@@ -326,20 +334,32 @@
     "def setroam(evt):\n",
     "    global roam\n",
     "    roam = not roam\n",
-    "    \n",
+    "\n",
     "scene.bind(\"mousedown mouseup\", setroam)\n",
+    "\n",
+    "hue = 0\n",
+    "dhue = 0.01\n",
+    "gangle = 0.03 # incremental rotation of the gears\n",
     "\n",
     "while True:\n",
     "    rate(30)\n",
     "\n",
-    "    # If in roaming mode, change camera position and direction according to mouse position\n",
+    "    # If in roaming mode, change center and forward according to mouse position\n",
     "    if roam:\n",
     "        ray = scene.mouse.ray\n",
     "        if abs(ray.dot(scene.forward)) < maxcosine: # do something only if outside crosshairs\n",
     "            newray = norm(vector(ray.x, 0, ray.z))\n",
     "            angle = asin(scene.forward.cross(newray).dot(scene.up))\n",
     "            scene.camera.rotate(angle=angle/30, axis=scene.up)\n",
-    "            scene.camera.pos = scene.camera.pos + (ray.y/4)*norm(scene.camera.axis)\n",
+    "            scene.camera.pos = scene.camera.pos + (ray.y/2)*norm(scene.camera.axis)\n",
+    "    \n",
+    "    hue += dhue\n",
+    "    entry.color = color.hsv_to_rgb(vector(hue,1,1))\n",
+    "    \n",
+    "    B.rotate(angle=0.05, axis=scene.up)\n",
+    "    \n",
+    "    gear1.rotate(angle=gangle, axis=vector(0,0,1))\n",
+    "    gear2.rotate(angle=-gangle, axis=vector(0,0,1))\n",
     "\n",
     "    # Roll the log\n",
     "    theta = theta + omega*dt\n",
@@ -397,7 +417,7 @@
     "    spring.axis = mass.pos + vector(0, hmass / 2, 0) - spring.pos\n",
     "\n",
     "    # Update the analog clock on the back slab\n",
-    "    clock.update()"
+    "    clock.update()\n"
    ]
   },
   {
