--- a/Demos/Textures2.ipynb
+++ b/Demos/Textures2.ipynb
@@ -106,6 +106,10 @@
    ],
    "source": [
     "from vpython import *\n",
+    "\n",
+    "# This version uses a VPython menu\n",
+    "# See Textures1 for a version that uses a Jupyter notebook menu\n",
+    "\n",
     "scene.width = 600\n",
     "scene.height = 600\n",
     "show = 'box'\n",
@@ -170,9 +174,9 @@
     "    end_setup()\n",
     "\n",
     "start_setup()\n",
-    "#scene.caption = \"Loading textures...\"\n",
-    "#scene.waitfor(\"textures\")\n",
-    "#scene.caption = \"\"\n",
+    "scene.caption = \"Loading textures...\"\n",
+    "scene.waitfor(\"textures\")\n",
+    "scene.caption = \"\"\n",
     "\n",
     "scene.caption = \"Choose the type of object:  \"\n",
     "\n",
