--- a/Demos/ButtonsSlidersMenus2.ipynb
+++ b/Demos/ButtonsSlidersMenus2.ipynb
@@ -94,7 +94,7 @@
    ],
    "source": [
     "from vpython import *\n",
-    "# This version uses GlowScript VPython widgets: button, radio button, checkbox, slider, menu\n",
+    "# This version uses VPython widgets: button, radio button, checkbox, slider, menu\n",
     "# See ButtonsSlidersMenus1 for a version that uses Jupyter notebook widgets: button, slider, menu\n",
     "scene.width = 350\n",
     "scene.height = 300\n",
