--- a/Demos/RotatingBoxes.ipynb
+++ b/Demos/RotatingBoxes.ipynb
@@ -10,19 +10,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/glow.2.1.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/glow.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -46,7 +34,7 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
+       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -58,7 +46,7 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/glow.2.1.min\"], function(){console.log(\"GLOW LOADED\");})"
+       "require([\"nbextensions/vpython_libraries/glow.min\"], function(){console.log(\"GLOW LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -71,6 +59,18 @@
      "data": {
       "application/javascript": [
        "require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -134,6 +134,8 @@
     "start = clock()\n",
     "N = 200\n",
     "\n",
+    "# 6.4/100\n",
+    "\n",
     "while True:\n",
     "    if loops == N:\n",
     "        s = '{:0.1f} millisecond computation per loop'.format(1000*ctime/loops)\n",
@@ -147,18 +149,9 @@
     "    ct = clock()\n",
     "    v = length*vector(sin(t), 0, cos(t))\n",
     "    for b in boxes:\n",
-    "        b.axis = v                               # pre-cython Jupyter 3.1 ms; GlowScript 0.4 ms \n",
-    "        #b.rotate(angle=.01, axis=vector(0,1,0)) # pre-cython Jupyter 38 ms; GlowScript 3.3 ms\n",
+    "        b.axis = v\n",
     "    ctime += clock()-ct\n",
-    "    loops += 1\n",
-    "\n",
-    "# For b.axis = v:\n",
-    "# Use cyvector class: 2.3 ms (1.3 times better than vector)\n",
-    "# Classic 0.9 ms (2.6 times better than cyvector)\n",
-    "\n",
-    "# For b.rotate(angle=.01, axis=vector(0,1,0)):\n",
-    "# Use cyvector class: 14.5 ms (2.6 times better than vector)\n",
-    "# Classic 6.3 ms (2.3 times better than cyvector)"
+    "    loops += 1"
    ]
   },
   {
